fix long text wrap

--- a/chat-client/src/components/ChatV2/MessageList/Message/Message.css
+++ b/chat-client/src/components/ChatV2/MessageList/Message/Message.css
@@ -102,3 +102,7 @@
 .mine .user-container {
   justify-content: end;
 }
+
+.bubble {
+  overflow-wrap: anywhere;
+}
